# Engineering-Team-AI-Agent

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt  requirements-dev.txt
.github/workflows/: ci-new.yml  ci.yml
scripts/: setup.sh
src/engineering_team/: __init__.py  architecture_planner.py  config.py  crew.py  flow.py  main_flow.py  models.py  module_creator.py  system_assembler.py
src/engineering_team/config/: agents.yaml
